--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="main">
     <h1 id="title">Dr. Norman Borlaug</h1>
-    <div>The man who saved a billion lives</div><!----title----->
+    <div>The man who saved a billion lives</div><!--title----->
   <div id="img-div">
     <img id="image" src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg" alt "pic from flickr" alt="">
     <div id="img-caption">Dr. Norman Borlaug, second from left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</div>
